Switch to reusing golang:1
[#156582099](https://www.pivotaltracker.com/story/show/156582099)

Co-authored-by: Luan Santos <lsantos@pivotal.io>

--- a/ci/docker/main-bosh-docker/Dockerfile
+++ b/ci/docker/main-bosh-docker/Dockerfile
@@ -2,8 +2,9 @@ FROM ubuntu:xenial
 
 ADD install.sh /tmp/install.sh
 RUN /tmp/install.sh && rm /tmp/install.sh
-ENV GOROOT /usr/local/go
-ENV PATH $GOROOT/bin:$PATH
+
+COPY --from=golang:1 /usr/local/go /usr/local/go
+ENV GOROOT=/usr/local/go PATH=/usr/local/go/bin:$PATH
 
 COPY bosh /usr/local/bin/
 RUN chmod +x /usr/local/bin/bosh
