Add in `cpi_api_test_max_version` property
to director spec to limit cpi version used

[#157881356] (https://www.pivotaltracker.com/story/show/157881356)

Signed-off-by: Bozhidar Lenchov <blenchov@pivotal.io>

--- a/src/bosh-director/spec/assets/test-director-config.yml
+++ b/src/bosh-director/spec/assets/test-director-config.yml
@@ -20,6 +20,7 @@ blobstore:
     user: admin
     password:
     davcli_path: true
+cpi_api_test_max_version: 2
 local_dns:
   enabled: false
   include_index: false
