--- a/ci/tasks/test-brats.yml
+++ b/ci/tasks/test-brats.yml
@@ -9,7 +9,7 @@ image_resource:
 inputs:
   - name: bosh-src
   - name: bosh-dns-release
-  - name: candidate-warden-ubuntu-stemcell
+  - name: stemcell
   - name: bosh-release
 
 run:
@@ -36,3 +36,4 @@ params:
   GCP_POSTGRES_EXTERNAL_DB_NAME: replace-me
   GCP_POSTGRES_EXTERNAL_DB_CLIENT_CERTIFICATE: replace-me
   GCP_POSTGRES_EXTERNAL_DB_CLIENT_PRIVATE_KEY: replace-me
+  STEMCELL_OS: ""
