Add health_monitor to inner bosh
[finishes #158093297](https://www.pivotaltracker.com/story/show/158093297)

Signed-off-by: Danny Berger <dberger@pivotal.io>

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/ops-hm-json-plugin-logger-job.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/ops-hm-json-plugin-logger-job.yml
@@ -9,4 +9,11 @@
   path: /releases/-
   value:
     name: hm-json-plugin
-    url: file://((hm-json-plugin-release-tarball))
+    version: create
+    url: file://((hm-json-plugin-release-path))
+
+- type: replace
+  path: /instance_groups/name=bosh/jobs/-
+  value:
+    name: health_monitor
+    release: bosh
