Add missing get for job 'unclaim-brats-mutex'

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -880,6 +880,7 @@ jobs:
   - name: unclaim-brats-mutex
     serial: true
     plan:
+      - get: brats-mutex
       - put: brats-mutex
         params: {release: brats-mutex}
 
