--- a/ci/tasks/test-brats.yml
+++ b/ci/tasks/test-brats.yml
@@ -16,6 +16,7 @@ run:
   path: bosh-src/ci/tasks/test-brats.sh
 
 params:
+  FOCUS_SPEC: ""
   RDS_MYSQL_EXTERNAL_DB_HOST: replace-me
   RDS_MYSQL_EXTERNAL_DB_USER: replace-me
   RDS_MYSQL_EXTERNAL_DB_PASSWORD: replace-me
