--- a/src/bosh-director/spec/assets/test-director-config.yml
+++ b/src/bosh-director/spec/assets/test-director-config.yml
@@ -54,6 +54,7 @@ record_events: true
 version: '0.0.2'
 mbus: 'nats://some-user:some-pass@some-nats-uri:1234'
 agent:
+  agent_wait_timeout: 1234
   env:
     bosh:
       blobstores:
