--- a/.final_builds/packages/registry/index.yml
+++ b/.final_builds/packages/registry/index.yml
@@ -391,6 +391,10 @@ builds:
     version: "45"
     blobstore_id: 59c6baac-1068-425b-8a1d-fc47a9c1328e
     sha1: 12dc9448f88f4245e0e7eeb8cc1661e6a1e9c089
+  536c5ce3d58b57adde3fb41eee71aa54c2ca28f1:
+    version: 536c5ce3d58b57adde3fb41eee71aa54c2ca28f1
+    blobstore_id: 42e1c8b9-b6c3-438c-71c5-60d2ce2e1260
+    sha1: 32443023b824a7024c7112d251b6404731ca49a1
   544f13cae5897fb61dbc8acb5107c8c42498c5aa:
     version: "34"
     blobstore_id: defea285-18a1-4276-9d23-49dc20646e1c
