--- a/releases/index.yml
+++ b/releases/index.yml
@@ -347,6 +347,8 @@ builds:
     version: "154"
   8eb56d4e-8fd5-48d3-b0fc-4801840d83f1:
     version: "256.10"
+  8f25d08a-4a72-4adf-46c5-c746c7f7899e:
+    version: 263.11.0
   8f9964a522c45c13c1c5c678a03c3314ae016a9a:
     version: "18"
   9005037e0772d33a692945597112fa54d542f69d:
